WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68244
REGRESSION (
r95052
): SelectorChecker identifier filter not working
https://bugs.webkit.org/show_bug.cgi?id=68244
Summary
REGRESSION (r95052): SelectorChecker identifier filter not working
Antti Koivisto
Reported
2011-09-16 06:22:05 PDT
Due to a typo.
Attachments
patch
(1.43 KB, patch)
2011-09-16 06:26 PDT
,
Antti Koivisto
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-09-16 06:26:35 PDT
Created
attachment 107642
[details]
patch
Antti Koivisto
Comment 2
2011-09-16 09:24:24 PDT
http://trac.webkit.org/changeset/95295
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug