REGRESSION (r95052): SelectorChecker identifier filter not working https://bugs.webkit.org/show_bug.cgi?id=68244

Reviewed by Dan Bernstein.

Missing &.

* css/SelectorChecker.cpp:
(WebCore::collectDescendantSelectorIdentifierHashes):



Canonical link: https://commits.webkit.org/84165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95295 268f45cc-cd09-0410-ab3c-d52691b4dbfc